--- a/index.html
+++ b/index.html
@@ -648,13 +648,37 @@
             }
 
             .player-card {
-                grid-template-columns: auto 1fr;
+                grid-template-columns: 40px 1fr 44px;
+                gap: 0.5rem;
+                padding: 0.75rem;
             }
 
-            .player-actions {
-                grid-column: 1 / -1;
-                justify-content: flex-end;
-                margin-top: 0.5rem;
+            .player-number {
+                width: 40px;
+                height: 40px;
+                font-size: 1.25rem;
+            }
+
+            .player-name {
+                font-size: 1rem;
+            }
+
+            .player-times {
+                gap: 0.75rem;
+                flex-wrap: wrap;
+            }
+
+            .time-stat .value {
+                font-size: 0.75rem;
+            }
+
+            .time-stat .label {
+                font-size: 0.5rem;
+            }
+
+            .btn-sub {
+                width: 40px;
+                height: 40px;
             }
 
             .settings-row {
