--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         .section-header.stats-header { background: linear-gradient(90deg, var(--stats-blue), #1e40af); }
         .section-title { font-size: 1rem; font-weight: 600; text-transform: uppercase; letter-spacing: 1px; display: flex; align-items: center; gap: 0.5rem; }
         .player-count { font-family: 'Roboto Mono', monospace; font-size: 1.25rem; font-weight: 600; color: var(--active-gold); }
-        .section-body { padding: 0.75rem; min-height: 150px; max-height: 400px; overflow-y: auto; }
-        .player-list { display: flex; flex-direction: column; gap: 0.5rem; }
-        .player-card { background: rgba(255, 255, 255, 0.05); border-radius: 10px; padding: 0.75rem; display: grid; grid-template-columns: 1fr auto; align-items: center; gap: 0.75rem; border: 2px solid transparent; }
+        .section-body { padding: 0.75rem; min-height: 150px; overflow-y: auto; }
+        .player-list { display: flex; flex-direction: column; gap: 0.35rem; }
+        .player-card { background: rgba(255, 255, 255, 0.05); border-radius: 8px; padding: 0.5rem 0.75rem; display: grid; grid-template-columns: 1fr auto; align-items: center; gap: 0.5rem; border: 2px solid transparent; }
         .player-card.on-court { border-color: var(--success-green); background: rgba(34, 197, 94, 0.1); }
         .player-card.on-bench { border-color: var(--text-muted); }
         .player-info { display: flex; flex-direction: column; gap: 0.25rem; }
@@ -88,10 +88,10 @@
         .stats-player-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 0.5rem; }
         .stats-player-name { font-size: 1rem; font-weight: 600; text-transform: uppercase; }
         .stats-player-totals { font-family: 'Roboto Mono', monospace; font-size: 0.75rem; color: var(--active-gold); }
-        .stats-buttons { display: flex; gap: 0.35rem; flex-wrap: wrap; }
-        .stat-btn { font-family: 'Oswald', sans-serif; font-size: 0.7rem; font-weight: 600; padding: 0.5rem 0.6rem; border: none; border-radius: 6px; cursor: pointer; display: flex; flex-direction: column; align-items: center; gap: 0.15rem; min-width: 52px; }
-        .stat-btn .stat-label { font-size: 0.55rem; text-transform: uppercase; opacity: 0.8; }
-        .stat-btn .stat-value { font-family: 'Roboto Mono', monospace; font-size: 1rem; font-weight: 700; }
+        .stats-buttons { display: flex; gap: 0.25rem; flex-wrap: nowrap; align-items: center; }
+        .stat-btn { font-family: 'Oswald', sans-serif; font-size: 0.65rem; font-weight: 600; padding: 0.4rem 0.35rem; border: none; border-radius: 6px; cursor: pointer; display: flex; flex-direction: column; align-items: center; gap: 0.1rem; min-width: 42px; flex: 1; }
+        .stat-btn .stat-label { font-size: 0.5rem; text-transform: uppercase; opacity: 0.8; }
+        .stat-btn .stat-value { font-family: 'Roboto Mono', monospace; font-size: 0.9rem; font-weight: 700; }
         .stat-btn.pts { background: var(--active-gold); color: var(--body-bg); }
         .stat-btn.reb { background: var(--stats-blue); color: var(--text-white); }
         .stat-btn.stl { background: var(--success-green); color: var(--body-bg); }
@@ -99,7 +99,7 @@
         .stat-btn.blk { background: var(--accent-orange); color: var(--body-bg); }
         .stat-btn.foul { background: var(--danger-red); color: var(--text-white); }
         .stat-btn:active { transform: scale(0.95); }
-        .undo-btn { font-size: 0.6rem; padding: 0.25rem 0.4rem; background: var(--bench-gray); color: var(--text-muted); border: 1px solid var(--text-muted); border-radius: 4px; cursor: pointer; margin-left: auto; }
+        .undo-btn { font-size: 0.75rem; padding: 0.35rem 0.4rem; background: var(--bench-gray); color: var(--text-muted); border: 1px solid var(--text-muted); border-radius: 4px; cursor: pointer; }
         .undo-btn:hover { background: var(--danger-red); color: var(--text-white); }
         .stats-summary { display: grid; grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); gap: 0.75rem; margin-top: 1rem; }
         .stat-card { background: var(--card-bg); border-radius: 10px; padding: 1rem; text-align: center; }
@@ -285,13 +285,14 @@
             return `<div class="player-card ${loc === 'court' ? 'on-court' : 'on-bench'}"><div class="player-info"><div class="player-name">${p.name}</div><div class="player-times">${loc === 'court' ? `<div class="time-stat"><span class="label">Stint</span><span class="value ${sc}" id="stint-${p.id}">${formatTime(p.currentStintTime)}</span></div>` : `<div class="time-stat"><span class="label">Bench</span><span class="value ${bc}" id="benchTime-${p.id}">${formatTime(p.currentBenchTime)}</span></div>`}<div class="time-stat"><span class="label">Total Play</span><span class="value" id="totalPlay-${p.id}">${formatTime(p.totalPlayTime)}</span></div><div class="time-stat"><span class="label">Total Bench</span><span class="value" id="totalBench-${p.id}">${formatTime(p.totalBenchTime)}</span></div></div></div><div class="player-actions">${loc === 'court' ? `<button class="btn-sub sub-out" onclick="subOut(${p.id})">↓</button>` : `<button class="btn-sub sub-in" onclick="subIn(${p.id})" ${roster.filter(x => x.onCourt).length >= 5 ? 'disabled' : ''}>↑</button>`}</div></div>`;
         }
         function renderStatsCard(p) {
-            return `<div class="stats-player-card"><div class="stats-player-header"><span class="stats-player-name">${p.name}</span><span class="stats-player-totals">${p.stats.pts} PTS</span></div><div class="stats-buttons"><button class="stat-btn pts" onclick="addStat(${p.id},'pts',1)"><span class="stat-label">+1</span><span class="stat-value">${p.stats.pts}</span></button><button class="stat-btn pts" onclick="addStat(${p.id},'pts',2)"><span class="stat-label">+2</span></button><button class="stat-btn pts" onclick="addStat(${p.id},'pts',3)"><span class="stat-label">+3</span></button><button class="stat-btn reb" onclick="addStat(${p.id},'reb')"><span class="stat-label">REB</span><span class="stat-value">${p.stats.reb}</span></button><button class="stat-btn stl" onclick="addStat(${p.id},'stl')"><span class="stat-label">STL</span><span class="stat-value">${p.stats.stl}</span></button><button class="stat-btn ast" onclick="addStat(${p.id},'ast')"><span class="stat-label">AST</span><span class="stat-value">${p.stats.ast}</span></button><button class="stat-btn blk" onclick="addStat(${p.id},'blk')"><span class="stat-label">BLK</span><span class="stat-value">${p.stats.blk}</span></button><button class="stat-btn foul" onclick="addStat(${p.id},'fouls')"><span class="stat-label">FOUL</span><span class="stat-value">${p.stats.fouls}</span></button><button class="undo-btn" onclick="undoLastStat(${p.id})">UNDO</button></div></div>`;
+            return `<div class="stats-player-card"><div class="stats-player-header"><span class="stats-player-name">${p.name}</span><span class="stats-player-totals">${p.stats.pts} PTS</span></div><div class="stats-buttons"><button class="stat-btn pts" onclick="addStat(${p.id},'pts',1)"><span class="stat-label">PTS</span><span class="stat-value">${p.stats.pts}</span></button><button class="stat-btn reb" onclick="addStat(${p.id},'reb')"><span class="stat-label">REB</span><span class="stat-value">${p.stats.reb}</span></button><button class="stat-btn stl" onclick="addStat(${p.id},'stl')"><span class="stat-label">STL</span><span class="stat-value">${p.stats.stl}</span></button><button class="stat-btn ast" onclick="addStat(${p.id},'ast')"><span class="stat-label">AST</span><span class="stat-value">${p.stats.ast}</span></button><button class="stat-btn blk" onclick="addStat(${p.id},'blk')"><span class="stat-label">BLK</span><span class="stat-value">${p.stats.blk}</span></button><button class="stat-btn foul" onclick="addStat(${p.id},'fouls')"><span class="stat-label">FLS</span><span class="stat-value">${p.stats.fouls}</span></button><button class="undo-btn" onclick="undoLastStat(${p.id})">↩</button></div></div>`;
         }
         function renderRosterChip(p) { return `<div class="roster-chip ${p.activeForGame ? 'active' : 'inactive'}"><span class="chip-name">${p.name}</span><button class="chip-toggle ${p.activeForGame ? 'toggle-active' : 'toggle-inactive'}" onclick="togglePlayerActive(${p.id})">${p.activeForGame ? '✓' : '○'}</button><button class="chip-delete" onclick="removePlayer(${p.id})">×</button></div>`; }
         function renderStats() {
-            const active = roster.filter(p => p.activeForGame);
+            const onCourt = roster.filter(p => p.activeForGame && p.onCourt);
             const list = document.getElementById('statsPlayerList');
-            list.innerHTML = active.length === 0 ? '<div class="empty-state"><div class="icon">📊</div><p>No active players</p></div>' : [...active].sort((a, b) => b.stats.pts - a.stats.pts).map(renderStatsCard).join('');
+            list.innerHTML = onCourt.length === 0 ? '<div class="empty-state"><div class="icon">📊</div><p>No players on court<br>Sub players in from Playing Time tab</p></div>' : onCourt.map(renderStatsCard).join('');
+            const active = roster.filter(p => p.activeForGame);
             document.getElementById('teamPts').textContent = active.reduce((s, p) => s + p.stats.pts, 0);
             document.getElementById('teamReb').textContent = active.reduce((s, p) => s + p.stats.reb, 0);
             document.getElementById('teamStl').textContent = active.reduce((s, p) => s + p.stats.stl, 0);
